add pages, header and navigation component

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>wir-page</title>
   </head>
-  <body>
-    <div id="app"></div>
+  <body v-scroll="onScroll">
+    <div id="app" v-scroll="onScroll"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
