refactorings, add PageAbout

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>wir-page</title>
+    <title>Wild in der Region</title>
   </head>
   <body v-scroll="onScroll">
     <div id="app" v-scroll="onScroll"></div>
